# hardess

./: .gitignore  README.md  package.json  tsconfig.json
config/: benchmark-short-circuit.config.ts  (+2 more)
experiment/pingora-worker-runtime/: Cargo.toml  README.md  TODO-breadth-first.md  benchmark-optimization-log.md  design-control-plane-runtime-separation.md  design-learning-from-deno-and-bun.md  design-low-copy-response-bridge.md  design-package-management.md  design-pingora-runtime-event-alignment.md  design-public-error-contract.md  design-reusing-deno-pieces.md  design-runtime-invocation-bridge.md  design-sdk-compatibility.md  design-ts-runtime-selection.md  design-v1-compat-adapter.md  design-v1-compat-contract.md  design-v1-v2-comparison.md  design-v1-v2-compatibility.md  design-websocket-runtime.md  design-worker-generation-rollout.md  plan-next-phase.md  stage-summary-2026-04.md
experiment/pingora-worker-runtime/bench/: bun_native_websocket.ts  ws_roundtrip.ts
experiment/pingora-worker-runtime/contracts/: public-errors.json
experiment/pingora-worker-runtime/crates/gateway-host/: Cargo.toml
experiment/pingora-worker-runtime/crates/worker-abi/: Cargo.toml
experiment/pingora-worker-runtime/workers/benchmark_short_circuit/: mod.ts
experiment/pingora-worker-runtime/workers/benchmark_websocket/: mod.ts
experiment/pingora-worker-runtime/workers/blocking/: mod.ts
experiment/pingora-worker-runtime/workers/compat_v1/: mod.ts
experiment/pingora-worker-runtime/workers/compat_v1_error/: mod.ts
experiment/pingora-worker-runtime/workers/flaky/: mod.ts
(+249 files in other folders)
