[package]
name = "gateway-host"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
deno_ast = { version = "0.53.1", features = ["emit", "transpiling"] }
deno_core = "0.398.0"
deno_error = "0.7.0"
http = "1"
pingora = "0.8.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt", "sync", "time", "signal"] }
ureq = "2"
worker-abi = { path = "../worker-abi" }
